--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
       <version>1.9.5</version>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>org.assertj</groupId>
+      <artifactId>assertj-core</artifactId>
+      <version>3.12.1</version>
+      <scope>test</scope>
+    </dependency>
+
   </dependencies>
 
   <build>
